fix: link color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,3 +27,7 @@
   --ifm-color-primary-lightest: #000000; /* Almost Black */
   --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.3); /* Highlighted code background */
 }
+
+[data-theme='dark'] a{
+  color:#FFF;
+}
